More text + testing out new timeline

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#home" class="page-scroll dymo"><span>|Hem|</span></a></li>
         <li><a href="#theday-section" class="page-scroll dymo"><span>|Dagen|</span></a></li>
-        <li><a href="#location-section" class="page-scroll dymo"><span>|Hitta|hit|</span></a></li>
+        <li><a href="#team-section" class="page-scroll dymo"><span>|Följet|</span></a></li>
         <li><a href="#living-section" class="page-scroll dymo"><span>|Boende|</span></a></li>
+        <li><a href="#location-section" class="page-scroll dymo"><span>|Hitta|hit|</span></a></li>
         <li><a href="#practicals-section" class="page-scroll dymo"><span>|Praktiska|</span></a></li>
       </ul>
     </div>
@@ -101,7 +102,7 @@
             <h3 class="dymo"><i class="fa fa-cutlery"></i></h3>
           </div>
           <div class="col-md-11 col-xs-11 service text-left">
-            <p class="dymo-inline" style="margin-bottom: 0;"><span class="dymo">|Middag|</span> - Efter vigseln bjuds det in till middag och en hejdundrande fest i Societetshuset som ligger ett stenkast från kyrkan. Ingen bilkörning är därför nödvändig, eller ens rekommenderad, förrän ni avser lämna staden.</p>
+            <p class="dymo-inline" style="margin-bottom: 0;"><span class="dymo">|Middag|</span> - Efter vigseln bjuds det in till middag och en hejdundrande fest i <strong>Societetshuset</strong> som ligger ett stenkast från kyrkan. Ingen bilkörning är därför nödvändig, eller ens rekommenderad, förrän ni avser lämna staden.</p>
           </div>
         </div>
 
@@ -110,15 +111,7 @@
             <h3 class="dymo"><i class="fa fa-users"></i></h3>
           </div>
           <div class="col-md-11 col-xs-11 service text-left">
-            <p class="dymo-inline" style="margin-bottom: 0;"><span class="dymo">|Fest|</span> - Som gamla Uppsalastudenter är brudparet vana vid att festligheterna på nation slutade redan kl. 01.00. Detsamma gäller även på Societetshuset. Då tidigare hyresgäster högljutt festat loss in på småtimmarna har damerna och herrarna i bygdeföreningens styrelse beslutat att dra ur proppen kl. 01.00.</p>
-          </div>
-        </div>
-        <div class="row  vertical-aligned">
-          <div class="col-md-1 col-xs-1">
-            <h3 class="dymo"><i class="fa fa-users" style="color: transparent"></i></h3>
-          </div>
-          <div class="col-md-11 col-xs-11 service text-left">
-            <p class="dymo-inline" style="margin-bottom: 0;">Men... det har väl aldrig hindrat den festglade? För den som vill fortsätter kalaset i sommarnatten på valfri klipphäll.</p>
+            <p class="dymo-inline" style="margin-bottom: 0;"><span class="dymo">|Fest|</span> - Efter middagen ställs borden undan och baren öppnas. Då tidigare hyresgäster högljutt festat loss in på småtimmarna har damerna och herrarna i bygdeföreningens styrelse beslutat att dra ur proppen kl. 01.00. Men... Det har väl aldrig hindrat den festglade? För den som vill fortsätter då kalaset i sommarnatten på valfri klipphäll. </p>
           </div>
         </div>
       </div>
@@ -132,28 +125,56 @@
 </div>
 
 <!-- Team Section -->
-<div id="location-section" class="team-section text-center">
+<div id="team-section" class="team-section text-center">
   <div class="container">
     <div class="section-title wow fadeInDown">
-      <h2>|Hitta|hit|</h2>
-    </div>
-
-    <div class="embed-container maps wow fadeInDown" data-wow-delay="200ms">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d686618.1863713152!2d17.26730346550187!3d59.54936562915603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46606b9c93981485%3A0xb5316e9dda354f57!2s%C3%96regrunds+kyrka!5e0!3m2!1ssv!2sse!4v1451512101597" frameborder="0" style="border:0;margin-bottom:30px;width:100%;height:300px;" allowfullscreen></iframe>
+      <h2>|Bröllopsföljet|</h2>
+      <p>Det finns några personer som kan vara bra att känna till:</p>
     </div>
 
     <div class="row">
-      <div class="col-md-4 col-sm-12 service wow fadeInUp" data-wow-delay="200ms"> <i class="fa fa-car"></i>
-        <h4><strong>Från Stockholm</strong></h4>
-        <p>Drygt 15 mil nordost om Stockholm. Karta och vägbeskrivning hittar du <a href="http://valte.ch/stockholm-oregrund" target="_blank"><strong>här.</strong></a></p>
+      <div class="col-md-7 col-sm-12 col-md-push-5 team">
+        <div class="row">
+          <div class="col-md-6 col-sm-4 col-xs-12 team wow fadeInUp" data-wow-delay="400ms">
+            <div class="thumbnail"> <img src="img/team/02.jpg" alt="..." class="img-circle team-img">
+              <div class="caption">
+                <h3>Gabriel Tiste</h3>
+                <p>Bestman & Toastmaster</p>
+                <ul class="list-inline">
+                  <li><a href="mailto:gabbe@smarr.se" data-toggle="tooltip" data-placement="bottom" title="gabbe@smarr.se"><i class="fa fa-envelope"></i></a></li>
+                  <li><a href="tel:0701234567" data-toggle="tooltip" data-placement="bottom" title="0701234567"><i class="fa fa-phone"></i></a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-4 col-xs-12 team wow fadeInUp" data-wow-delay="200ms">
+            <div class="thumbnail"> <img src="img/team/01.jpg" alt="..." class="img-circle team-img">
+              <div class="caption">
+                <h3>Mikaela Gren</h3>
+                <p>Brudtärna</p>
+                <ul class="list-inline">
+                  <li><a href="mailto:mickis@smarr.se" data-toggle="tooltip" data-placement="bottom" title="mickis@smarr.se"><i class="fa fa-envelope"></i></a></li>
+                  <li><a href="tel:0701234567" data-toggle="tooltip" data-placement="bottom" title="0701234567"><i class="fa fa-phone"></i></a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12 col-sm-4 col-xs-12 team wow fadeInUp" data-wow-delay="600ms">
+            <div class="thumbnail"> <img src="img/team/03.jpg" alt="..." class="img-circle team-img">
+              <div class="caption">
+                <h3>Sara Tiste</h3>
+                <p>Toastmasterns och brudtärnans högra hand</p>
+                <ul class="list-inline">
+                  <li><a href="mailto:sara@smarr.se" data-toggle="tooltip" data-placement="bottom" title="sara@smarr.se"><i class="fa fa-envelope"></i></a></li>
+                  <li><a href="tel:0701234567" data-toggle="tooltip" data-placement="bottom" title="0701234567"><i class="fa fa-phone"></i></a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="col-md-4 col-sm-12 service wow fadeInUp" data-wow-delay="400ms"> <i class="fa fa-car"></i>
-        <h4><strong>Från Uppsala</strong></h4>
-        <p>Drygt 8 mil nordost om Uppsala. Karta och vägbeskrivning hittar du <a href="http://valte.ch/uppsala-oregrund" target="_blank"><strong>här.</strong></a></p>
-      </div>
-      <div class="col-md-4 col-sm-12 service wow fadeInUp" data-wow-delay="600ms"> <i class="fa fa-bus"></i>
-        <h4><strong>Allmän kommunikation</strong></h4>
-        <p>Buss 811 från Uppsala till Öregrund.<br />Anslutningståg från Stockholm.</p>
+      <div class="col-md-5 col-sm-12 col-md-pull-7 team wow fadeInUp" data-wow-delay="200ms">
+        <img src="img/teamet.jpeg" class="img-responsive img-centered img-rounded" style="margin-bottom: 100px;">
       </div>
     </div>
   </div>
@@ -172,19 +193,21 @@
     </div>
 
     <div class="row vertical-aligned-md">
-      <div class="col-md-5 col-sm-12 col-xs-12 service wow fadeInUp text-left" data-wow-delay="200ms">
-        <img src="img/living.jpg" class="img-responsive img-centered img-rounded" style="margin-bottom: 20px;"/>
+      <div class="col-md-6 col-sm-12 col-xs-12 service wow fadeInUp text-left" data-wow-delay="200ms">
+        <img src="img/living.jpg" class="img-responsive img-centered img-rounded" style="margin-bottom: 20px;width:100%;"/>
       </div>
-      <div class="col-md-7 col-sm-12 col-xs-12 service wow fadeInUp text-left" data-wow-delay="400ms">
+      <div class="col-md-6 col-sm-12 col-xs-12 service wow fadeInUp text-left" data-wow-delay="400ms">
         <p>
           Det finns flera trevliga övernattningsmöjligheter i olika prisklasser att välja mellan i Öregrund.
-          Vi har lagt in en preliminärbokning åt er gäster på <em>Strandhotellet</em>. Ange att ni tillhör vårt
-          bröllopssällskap om ni bokar rum hos dem <em>(för er som stannar två nätter så ska man få 10% rabatt)</em>. De bokade rummen släpps två månader innan bröllopet, så passa på att
+          Vi har lagt in en preliminärbokning åt er gäster på <em>Strandhotellet</em> (här kommer även vi bo hela
+          helgen). Ange att ni tillhör vårt
+          bröllopssällskap om ni bokar rum hos dem <em>(för er som stannar två nätter så ska man få 10% rabatt)</em>. De
+          bokade rummen släpps två månader innan bröllopet, så passa på att
           boka innan dess om ni vill vara säkra på att få rum.
         </p>
         <p>
-          Strandhotellet, Hotell Floras Trädgård och Klockar-gården ligger centralt i Öregrund och på promenadavstånd
-          till både kyrkan och Societetshuset.</p>
+          Strandhotellet, Klockargården, Hotell Floras Trädgård, Uddens B&B och Epokgården ligger centralt i
+          Öregrund och på promenadavstånd till både kyrkan och Societetshuset.</p>
         <p>
           Vill man tälta finns ledig gräsmatta vid <a href="http://valte.ch/stugan-oregrund"><strong>stugan</strong></a>!
         </p>
@@ -242,6 +265,42 @@
 </div>
 
 <!-- Team Section -->
+<div id="location-section" class="team-section text-center">
+  <div class="container">
+    <div class="section-title wow fadeInDown">
+      <h2>|Hitta|hit|</h2>
+    </div>
+
+    <div class="embed-container maps wow fadeInDown" data-wow-delay="200ms">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d686618.1863713152!2d17.26730346550187!3d59.54936562915603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46606b9c93981485%3A0xb5316e9dda354f57!2s%C3%96regrunds+kyrka!5e0!3m2!1ssv!2sse!4v1451512101597" frameborder="0" style="border:0;margin-bottom:30px;width:100%;height:300px;" allowfullscreen></iframe>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4 col-sm-12 service wow fadeInUp" data-wow-delay="200ms"> <i class="fa fa-car"></i>
+        <h4><strong>Från Stockholm</strong></h4>
+        <p>Drygt 15 mil nordost om Stockholm. Karta och vägbeskrivning hittar du <a href="http://valte.ch/stockholm-oregrund" target="_blank"><strong>här.</strong></a></p>
+      </div>
+      <div class="col-md-4 col-sm-12 service wow fadeInUp" data-wow-delay="400ms"> <i class="fa fa-car"></i>
+        <h4><strong>Från Uppsala</strong></h4>
+        <p>Drygt 8 mil nordost om Uppsala. Karta och vägbeskrivning hittar du <a href="http://valte.ch/uppsala-oregrund" target="_blank"><strong>här.</strong></a></p>
+      </div>
+      <div class="col-md-4 col-sm-12 service wow fadeInUp" data-wow-delay="600ms"> <i class="fa fa-bus"></i>
+        <h4><strong>Allmän kommunikation</strong></h4>
+        <p>Buss 811 från Uppsala till Öregrund.<br />Anslutningståg från Stockholm.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Services Section -->
+<div class="bg-section" >
+</div>
+
+<!-- Services Section -->
+<div class="bg-section" >
+</div>
+
+<!-- Team Section -->
 <div id="practicals-section" class="team-section text-center">
   <div class="container">
     <div class="section-title wow fadeInDown">
@@ -251,37 +310,63 @@
     <div class="row">
       <div class="col-md-1 col-sm-12"></div>
       <div class="col-md-5 col-sm-12 service wow fadeInDown text-left" data-wow-delay="200ms">
-        <p class="dymo-inline"><span class="dymo">|O.S.A.|</span> - O.S.A senaste den <strong>30 mars</strong> till XXX på telefon XXX
+        <p class="dymo-inline"><span class="dymo">|O.S.A.|</span> - O.S.A senaste den <strong>15 april</strong> till
+          AnnSofie Eliasson (brudgummens mor) på telefon 070-3362 915
           och berätta då om ni har några speciella allergier eller önskemål när det gäller mat och dryck.</p>
 
         <p class="dymo-inline"><span class="dymo">|Tal|</span> - I god tid innan bröllopet vill vi även att ni meddelar
           toastmaster Gabriel Tiste om eventuella tal. Han kan även svara på andra funderingar som ni har. Självklart är
           ni också välkomna att höra av er till oss. Kontaktuppgifter till Gabriel hittar ni <a href="#team-section" class="page-scroll">här</a>.</p>
 
-        <p class="dymo-inline"><span class="dymo">|Musik|</span> - Maila tre av era bästa partylåtar för kvällen till musik@smarr.se.</p>
+        <p class="dymo-inline"><span class="dymo">|Musik|</span> - Maila <strong>tre</strong> av era bästa partylåtar för kvällen till musik@smarr.se.</p>
+
+        <p class="dymo-inline"><span class="dymo">|Klädkod|</span> - Kavaj (valfri färg).</p>
+
+        <p class="dymo-inline"><span class="dymo">|Respektive|</span> - Respektive är självklart välkomna, glöm dock inte att nämna detta vid O.S.A till AnnSofie Eliasson.</p>
 
         <p class="dymo-inline"><span class="dymo">|Barn|</span> - Vi tycker jättemycket om era barn, som ni såklart vet,
           men kvällen önskar vi fira i vuxnas sällskap. Bebisar som ammas är givetvis välkomna.</p>
       </div>
       <div class="col-md-5 col-sm-12 service wow fadeInDown text-left" data-wow-delay="400ms">
         <p class="dymo-inline"><span class="dymo">|Bar|</span> - Töm spargrisen. Efter bröllopsmiddagen öppnar baren, där
-          självkostnadspris gäller.</p>
-
-        <p class="dymo-inline"><span class="dymo">|Klädkod|</span> - Kavaj (valfri färg).</p>
+          självkostnadspris gäller (swish finns för er med tom spargris).</p>
 
         <p class="dymo-inline"><span class="dymo">|Önskelista|</span> - Det finaste vi kan få är att fira vår stora dag i ert sällskap.
           Vi uppskattar att ni tar er tiden att resa till Öregrund för vår skull. Vi har hunnit samla på oss prylar och
           det mesta som
           hör hemmet till under våra år tillsammans.</p>
 
-        <p class="dymo-inline">Om ni ändå önskar ge något så är ett litet bidrag till vår bröllopsresa välkommet. Vill ni hellre ge något
-          annat, så har
-          vår xxx tips på sådant som vi önskar oss.</p>
+        <p class="dymo-inline">Om ni ändå önskar ge något så är ett litet bidrag till vår bröllopsresa välkommet
+          (ICA-banken, 9271-938 039 3). Vill ni hellre ge något
+          annat, så har vår toastmaster tips på sådant som vi önskar oss.</p>
+
+        <p class="dymo-inline"><span class="dymo">|Dagen|efter|</span> - Dagen efter bröllopet arrangeras en gemensam frukost
+          på Strandhotellet. För er som bor på där ingår frukosten i boendet, för er övriga kostar frukosten
+          xx kr per person (mer information kommer...). Vänligen meddela toastmaster Gabriel om du önskar
+          delta på frukosten senast den <strong>30 maj</strong>.
+        </p>
+
       </div>
       <div class="col-md-1 col-sm-12"></div>
     </div>
   </div>
 </div>
+
+<!-- Services Section -->
+<div class="bg-section" >
+</div>
+
+<div id="timeline-section" class="team-section text-center">
+  <div class="container">
+    <div class="section-title wow fadeInDown">
+      <h2>|Tidslinje|</h2>
+      <div class="clearfix"></div>
+    </div>
+    <img src="img/timeline.png" />
+    </div>
+  </div>
+</div>
+
 
 <div id="footer">
   <div class="container">
