Better timeline, responsive

--- a/index.html
+++ b/index.html
@@ -357,12 +357,12 @@
 </div>
 
 <div id="timeline-section" class="team-section text-center">
-  <div class="container">
+  <div class="container-fluid">
     <div class="section-title wow fadeInDown">
       <h2>|Tidslinje|</h2>
       <div class="clearfix"></div>
     </div>
-    <img src="img/timeline.png" />
+    <img src="img/timeline.png" class="img-centered img-responsive"/>
     </div>
   </div>
 </div>
