--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand" href="home.html"><i class="fa fa-heart-o"></i> JJ Wedding 2016<strong></strong></a> </div>
+      <a class="navbar-brand" href="/"><i class="fa fa-heart-o"></i> JJ Wedding 2016<strong></strong></a> </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#home" class="page-scroll dymo"><span>|Hem|</span></a></li>
         <li><a href="#theday-section" class="page-scroll dymo"><span>|Dagen|</span></a></li>
         <li><a href="#team-section" class="page-scroll dymo"><span>|Följet|</span></a></li>
         <li><a href="#living-section" class="page-scroll dymo"><span>|Boende|</span></a></li>
         <li><a href="#location-section" class="page-scroll dymo"><span>|Hitta|hit|</span></a></li>
         <li><a href="#practicals-section" class="page-scroll dymo"><span>|Praktiska|</span></a></li>
+        <li><a href="#timeline-section" class="page-scroll dymo"><span>|Tidslinje|</span></a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
