--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand" href="/"><i class="fa fa-heart-o"></i> JJ Wedding 2016<strong></strong></a> </div>
+      <a class="navbar-brand page-scroll" href="#home"><i class="fa fa-heart-o"></i> JJ Wedding 2016<strong></strong></a> </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -68,7 +68,7 @@
 </nav>
 
 <!-- Header -->
-<header class="text-center" name="home">
+<header id="home" class="text-center" name="home">
   <div class="intro-text">
     <h2 class="wow fadeInDown">Jennifer <i class="fa fa-heart fa-heart-small"></i> Jonas</h2>
     <p class="dymo wow fadeInDown">|11|juni|2016| |Öregrund|</p>
