Remove data-wow-delay from all elements

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         <img src="img/we2.jpg" class="img-responsive img-centered img-rounded" style="margin-bottom: 20px;" />
       </div>
 
-      <div class="col-md-6 col-sm-12 wow fadeInUp " data-wow-delay="600ms">
-        <div class="row vertical-aligned wow fadeInUp " data-wow-delay="200ms">
+      <div class="col-md-6 col-sm-12 wow fadeInUp ">
+        <div class="row vertical-aligned wow fadeInUp ">
           <div class="col-md-1 col-xs-1">
             <h3 class="dymo"><i class="fa fa-bank"></i></h3>
           </div>
@@ -97,7 +97,7 @@
           </div>
         </div>
 
-        <div class="row  vertical-aligned wow fadeInUp " data-wow-delay="400ms">
+        <div class="row  vertical-aligned wow fadeInUp ">
           <div class="col-md-1 col-xs-1">
             <h3 class="dymo"><i class="fa fa-cutlery"></i></h3>
           </div>
@@ -135,7 +135,7 @@
     <div class="row">
       <div class="col-md-7 col-sm-12 col-md-push-5 team">
         <div class="row">
-          <div class="col-md-6 col-sm-4 col-xs-12 team wow fadeInUp" data-wow-delay="400ms">
+          <div class="col-md-6 col-sm-4 col-xs-12 team wow fadeInUp">
             <div class="thumbnail"> <img src="img/team/02.jpg" alt="..." class="img-circle team-img">
               <div class="caption">
                 <h3>Gabriel Tiste</h3>
@@ -147,7 +147,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-sm-4 col-xs-12 team wow fadeInUp" data-wow-delay="200ms">
+          <div class="col-md-6 col-sm-4 col-xs-12 team wow fadeInUp">
             <div class="thumbnail"> <img src="img/team/01.jpg" alt="..." class="img-circle team-img">
               <div class="caption">
                 <h3>Mikaela Gren</h3>
@@ -159,7 +159,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-12 col-sm-4 col-xs-12 team wow fadeInUp" data-wow-delay="600ms">
+          <div class="col-md-12 col-sm-4 col-xs-12 team wow fadeInUp">
             <div class="thumbnail"> <img src="img/team/03.jpg" alt="..." class="img-circle team-img">
               <div class="caption">
                 <h3>Sara Tiste</h3>
@@ -173,7 +173,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-5 col-sm-12 col-md-pull-7 team wow fadeInUp" data-wow-delay="200ms">
+      <div class="col-md-5 col-sm-12 col-md-pull-7 team wow fadeInUp">
         <img src="img/teamet.jpeg" class="img-responsive img-centered img-rounded" style="margin-bottom: 100px;">
       </div>
     </div>
@@ -193,10 +193,10 @@
     </div>
 
     <div class="row vertical-aligned-md">
-      <div class="col-md-6 col-sm-12 col-xs-12 service wow fadeInUp text-left" data-wow-delay="200ms">
+      <div class="col-md-6 col-sm-12 col-xs-12 service wow fadeInUp text-left">
         <img src="img/living.jpg" class="img-responsive img-centered img-rounded" style="margin-bottom: 20px;width:100%;"/>
       </div>
-      <div class="col-md-6 col-sm-12 col-xs-12 service wow fadeInUp text-left" data-wow-delay="400ms">
+      <div class="col-md-6 col-sm-12 col-xs-12 service wow fadeInUp text-left">
         <p>
           Det finns flera trevliga övernattningsmöjligheter i olika prisklasser att välja mellan i Öregrund.
           Vi har lagt in en preliminärbokning åt er gäster på <em>Strandhotellet</em> (här kommer även vi bo hela
@@ -215,7 +215,7 @@
     </div>
 
     <div class="row">
-      <div class="col-md-4 col-sm-6 col-xs-12 service wow fadeInDown text-left" data-wow-delay="200ms">
+      <div class="col-md-4 col-sm-6 col-xs-12 service wow fadeInDown text-left">
         <h2 class="dymo" style="font-size: 30px">|Hotell|</h2>
         <p><a href="http://www.strandhotellet.nu/">Strandhotellet (56 bäddar).</a><br/>
           Adress: Västergatan 1<br/>
@@ -226,7 +226,7 @@
           Telefon: <a href="tel:0173-30065">0173-30065</a>
         </p>
       </div>
-      <div class="col-md-4 col-sm-6 col-xs-12 service wow fadeInDown text-left" data-wow-delay="400ms">
+      <div class="col-md-4 col-sm-6 col-xs-12 service wow fadeInDown text-left">
         <h2 style="font-size: 30px" class="dymo">|Pensionat|</h2>
         <p><a href="http://www.hotellflora.se/">Hotell Floras Trädgård (16 bäddar)</a><br/>
           Adress: Västergatan 20<br/>
@@ -241,7 +241,7 @@
           Telefon: <a href="tel:0173-30220">0173-30220</a>
         </p>
       </div>
-      <div class="col-md-4 col-sm-12 service wow fadeInDown text-left" data-wow-delay="600ms">
+      <div class="col-md-4 col-sm-12 service wow fadeInDown text-left">
         <h2 style="font-size: 30px" class="dymo">|Vandrarhem|och|Camping|</h2>
         <p><a href="http://www.epokgarden.se/">Epokgården vandrarhem (17 bäddar)</a><br/>
           Adress: Rådhusgatan 16<br/>
@@ -271,20 +271,20 @@
       <h2>|Hitta|hit|</h2>
     </div>
 
-    <div class="embed-container maps wow fadeInDown" data-wow-delay="200ms">
+    <div class="embed-container maps wow fadeInDown">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d686618.1863713152!2d17.26730346550187!3d59.54936562915603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46606b9c93981485%3A0xb5316e9dda354f57!2s%C3%96regrunds+kyrka!5e0!3m2!1ssv!2sse!4v1451512101597" frameborder="0" style="border:0;margin-bottom:30px;width:100%;height:300px;" allowfullscreen></iframe>
     </div>
 
     <div class="row">
-      <div class="col-md-4 col-sm-12 service wow fadeInUp" data-wow-delay="200ms"> <i class="fa fa-car"></i>
+      <div class="col-md-4 col-sm-12 service wow fadeInUp"> <i class="fa fa-car"></i>
         <h4><strong>Från Stockholm</strong></h4>
         <p>Drygt 15 mil nordost om Stockholm. Karta och vägbeskrivning hittar du <a href="http://valte.ch/stockholm-oregrund" target="_blank"><strong>här.</strong></a></p>
       </div>
-      <div class="col-md-4 col-sm-12 service wow fadeInUp" data-wow-delay="400ms"> <i class="fa fa-car"></i>
+      <div class="col-md-4 col-sm-12 service wow fadeInUp"> <i class="fa fa-car"></i>
         <h4><strong>Från Uppsala</strong></h4>
         <p>Drygt 8 mil nordost om Uppsala. Karta och vägbeskrivning hittar du <a href="http://valte.ch/uppsala-oregrund" target="_blank"><strong>här.</strong></a></p>
       </div>
-      <div class="col-md-4 col-sm-12 service wow fadeInUp" data-wow-delay="600ms"> <i class="fa fa-bus"></i>
+      <div class="col-md-4 col-sm-12 service wow fadeInUp"> <i class="fa fa-bus"></i>
         <h4><strong>Allmän kommunikation</strong></h4>
         <p>Buss 811 från Uppsala till Öregrund.<br />Anslutningståg från Stockholm.</p>
       </div>
@@ -309,7 +309,7 @@
     </div>
     <div class="row">
       <div class="col-md-1 col-sm-12"></div>
-      <div class="col-md-5 col-sm-12 service wow fadeInDown text-left" data-wow-delay="200ms">
+      <div class="col-md-5 col-sm-12 service wow fadeInDown text-left">
         <p class="dymo-inline"><span class="dymo">|O.S.A.|</span> - O.S.A senaste den <strong>15 april</strong> till
           AnnSofie Eliasson (brudgummens mor) på telefon 070-3362 915
           och berätta då om ni har några speciella allergier eller önskemål när det gäller mat och dryck.</p>
@@ -327,7 +327,7 @@
         <p class="dymo-inline"><span class="dymo">|Barn|</span> - Vi tycker jättemycket om era barn, som ni såklart vet,
           men kvällen önskar vi fira i vuxnas sällskap. Bebisar som ammas är givetvis välkomna.</p>
       </div>
-      <div class="col-md-5 col-sm-12 service wow fadeInDown text-left" data-wow-delay="400ms">
+      <div class="col-md-5 col-sm-12 service wow fadeInDown text-left">
         <p class="dymo-inline"><span class="dymo">|Bar|</span> - Töm spargrisen. Efter bröllopsmiddagen öppnar baren, där
           självkostnadspris gäller (swish finns för er med tom spargris).</p>
 
