Small link fixes

--- a/index.html
+++ b/index.html
@@ -199,17 +199,18 @@
       <div class="col-md-6 col-sm-12 col-xs-12 service text-left">
         <p>
           Det finns flera trevliga övernattningsmöjligheter i olika prisklasser att välja mellan i Öregrund.
+          Strandhotellet, Klockargården, Hotell Floras Trädgård, Uddens B&B och Epokgården ligger centralt i
+          Öregrund och på promenadavstånd till både kyrkan och Societetshuset.
+        </p>
+        <p>
           Vi har lagt in en preliminärbokning åt er gäster på <em>Strandhotellet</em> (här kommer även vi bo hela
           helgen). Ange att ni tillhör vårt
           bröllopssällskap om ni bokar rum hos dem <em>(för er som stannar två nätter så ska man få 10% rabatt)</em>. De
           bokade rummen släpps två månader innan bröllopet, så passa på att
           boka innan dess om ni vill vara säkra på att få rum.
-        </p>
+          </p>
         <p>
-          Strandhotellet, Klockargården, Hotell Floras Trädgård, Uddens B&B och Epokgården ligger centralt i
-          Öregrund och på promenadavstånd till både kyrkan och Societetshuset.</p>
-        <p>
-          Vill man tälta finns ledig gräsmatta vid <a href="http://valte.ch/stugan-oregrund"><strong>stugan</strong></a>!
+          Vill man tälta finns ledig gräsmatta vid <a href="http://valte.ch/stugan-oregrund"><strong>stugan</strong></a> :)
         </p>
       </div>
     </div>
@@ -219,41 +220,41 @@
         <h2 class="dymo" style="font-size: 30px">|Hotell|</h2>
         <p><a href="http://www.strandhotellet.nu/">Strandhotellet (56 bäddar).</a><br/>
           Adress: Västergatan 1<br/>
-          Telefon: <a href="tel:0173-316 00">0173-31600</a>
+          Telefon: <a href="tel:0173-316 00">0173-316 00</a>
         </p>
         <p><a href="http://www.klockargardenoregrund.se/">Klockargården (25 bäddar)</a><br/>
           Adress: Långgatan 33<br/>
-          Telefon: <a href="tel:0173-30065">0173-30065</a>
+          Telefon: <a href="tel:0173-300 65">0173-300 65</a>
         </p>
       </div>
       <div class="col-md-4 col-sm-6 col-xs-12 service text-left">
         <h2 style="font-size: 30px" class="dymo">|Pensionat|</h2>
         <p><a href="http://www.hotellflora.se/">Hotell Floras Trädgård (16 bäddar)</a><br/>
           Adress: Västergatan 20<br/>
-          Telefon: <a href="tel:0173-316 60">0173-31660</a>
+          Telefon: <a href="tel:0173-316 60">0173-316 60</a>
         </p>
         <p><a href="http://www.ankargarden.se/">Ankargården (43 bäddar)</a><br/>
           Adress: Telegrafvägen 12<br/>
-          Telefon: <a href="tel:0173-30512">0173-30512</a>
+          Telefon: <a href="tel:0173-305 12">0173-305 12</a>
         </p>
         <p><a href="http://www.uddensbb.se/">Uddens B&B (3 bäddar)</a><br/>
           Adress: Tullportsgränd 5<br/>
-          Telefon: <a href="tel:0173-30220">0173-30220</a>
+          Telefon: <a href="tel:0173-302 20">0173-302 20</a>
         </p>
       </div>
       <div class="col-md-4 col-sm-12 service text-left">
         <h2 style="font-size: 30px" class="dymo">|Vandrarhem|och|Camping|</h2>
         <p><a href="http://www.epokgarden.se/">Epokgården vandrarhem (17 bäddar)</a><br/>
           Adress: Rådhusgatan 16<br/>
-          Telefon: <a href="tel:0173-302 00">0173-30200, 0708-365252</a>
+          Telefon: <a href="tel:0173-302 00">0173-302 00</a>, <a href="tel:070-836 52 52">070-836 52 52</a>
         </p>
         <p><a href="http://www.bokajak.se/">Öregrund Bo och Kajak, camping och stugor</a><br/>
           Adress: Lugnetvägen 1<br/>
-          Telefon: <a href="tel:070-2805442">070-2805442</a>
+          Telefon: <a href="tel:070-280 54 42">070-280 54 42</a>
         </p>
         <p><a href="http://www.sunnanocamping.com/">Sunnanö Camping, camping och stugor</a><br/>
           Adress: Arats Väg 27<br/>
-          Telefon: <a href="tel:0173-30064">0173-30064</a>
+          Telefon: <a href="tel:0173-300 64">0173-300 64</a>
         </p>
       </div>
     </div>
@@ -312,7 +313,7 @@
 
         <p class="dymo-inline"><span class="dymo">|Tal|</span> - I god tid innan bröllopet vill vi även att ni meddelar
           toastmaster Gabriel Tiste om eventuella tal. Han kan även svara på andra funderingar som ni har. Självklart är
-          ni också välkomna att höra av er till oss. Kontaktuppgifter till Gabriel hittar ni <a href="#team-section" class="page-scroll">här</a>.</p>
+          ni också välkomna att höra av er till oss. Kontaktuppgifter till Gabriel hittar ni <strong><a href="#team-section" class="page-scroll">här</a></strong>.</p>
 
         <p class="dymo-inline"><span class="dymo">|Musik|</span> - Maila <strong>tre</strong> av era bästa partylåtar för kvällen till musik@smarr.se.</p>
 
