Fix spell error

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
     <div class="row wow fadeInUp">
       <div class="col-md-5 col-sm-12 col-md-offset-1 service text-left">
-        <p class="dymo-inline"><span class="dymo">|O.S.A.|</span> - O.S.A senaste den <strong>15 april</strong> till
+        <p class="dymo-inline"><span class="dymo">|O.S.A.|</span> - O.S.A senast den <strong>15 april</strong> till
           AnnSofie Eliasson (brudgummens mor) på telefon 070-3362 915
           och berätta då om ni har några speciella allergier eller önskemål när det gäller mat och dryck.</p>
 
