Add church time

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h3 class="dymo"><i class="fa fa-bank"></i></h3>
           </div>
           <div class="col-md-11 col-xs-11 service text-left">
-            <p class="dymo-inline" style="margin-bottom: 0;"><span class="dymo">|Vigsel|</span> - Vigseln äger rum lördagen den 11 juni kl. xx.xx i Öregrunds kyrka. Öregrunds kyrka uppfördes i slutet av 1400-talet och är helgad åt S:t Gertrud.</p>
+            <p class="dymo-inline" style="margin-bottom: 0;"><span class="dymo">|Vigsel|</span> - Vigseln äger rum lördagen den 11 juni kl. 15.00 i Öregrunds kyrka. Var gärna där i god tid innan.</p>
           </div>
         </div>
 
