Add welcome message in footer

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 
 <div id="footer">
   <div class="container">
-      <p>JJ Wedding 2016</p>
+      <p style="font-size: 35px;">Varmt välkomna!</p>
   </div>
 </div>
 
