Contact info for wedding crew

--- a/index.html
+++ b/index.html
@@ -136,37 +136,37 @@
       <div class="col-md-7 col-sm-12 col-md-push-5 team">
         <div class="row">
           <div class="col-md-6 col-sm-4 col-xs-12 team ">
-            <div class="thumbnail"> <img src="img/team/02.jpg" alt="..." class="img-circle team-img">
+            <div class="thumbnail"> <img src="img/team/02.jpg" alt="Gabriel" class="img-circle team-img">
               <div class="caption">
                 <h3>Gabriel Tiste</h3>
                 <p>Bestman & Toastmaster</p>
                 <ul class="list-inline">
-                  <li><a href="mailto:gabbe@smarr.se" data-toggle="tooltip" data-placement="bottom" title="gabbe@smarr.se"><i class="fa fa-envelope"></i></a></li>
-                  <li><a href="tel:0701234567" data-toggle="tooltip" data-placement="bottom" title="0701234567"><i class="fa fa-phone"></i></a></li>
+                  <li><a href="mailto:gabriel@smarr.se" data-toggle="tooltip" data-placement="bottom" title="gabriel@smarr.se"><i class="fa fa-envelope"></i></a></li>
+                  <li><a href="tel:070-420 01 85" data-toggle="tooltip" data-placement="bottom" title="070-420 01 85"><i class="fa fa-phone"></i></a></li>
                 </ul>
               </div>
             </div>
           </div>
           <div class="col-md-6 col-sm-4 col-xs-12 team">
-            <div class="thumbnail"> <img src="img/team/01.jpg" alt="..." class="img-circle team-img">
+            <div class="thumbnail"> <img src="img/team/01.jpg" alt="Michaela" class="img-circle team-img">
               <div class="caption">
                 <h3>Mikaela Gren</h3>
                 <p>Brudtärna</p>
                 <ul class="list-inline">
-                  <li><a href="mailto:mickis@smarr.se" data-toggle="tooltip" data-placement="bottom" title="mickis@smarr.se"><i class="fa fa-envelope"></i></a></li>
-                  <li><a href="tel:0701234567" data-toggle="tooltip" data-placement="bottom" title="0701234567"><i class="fa fa-phone"></i></a></li>
+                  <li><a href="mailto:michaela@smarr.se" data-toggle="tooltip" data-placement="bottom" title="michaela@smarr.se"><i class="fa fa-envelope"></i></a></li>
+                  <li><a href="tel:070-485 05 35" data-toggle="tooltip" data-placement="bottom" title="070-485 05 35"><i class="fa fa-phone"></i></a></li>
                 </ul>
               </div>
             </div>
           </div>
           <div class="col-md-12 col-sm-4 col-xs-12 team">
-            <div class="thumbnail"> <img src="img/team/03.jpg" alt="..." class="img-circle team-img">
+            <div class="thumbnail"> <img src="img/team/03.jpg" alt="Sara" class="img-circle team-img">
               <div class="caption">
                 <h3>Sara Tiste</h3>
                 <p>Toastmasterns och brudtärnans högra hand</p>
                 <ul class="list-inline">
                   <li><a href="mailto:sara@smarr.se" data-toggle="tooltip" data-placement="bottom" title="sara@smarr.se"><i class="fa fa-envelope"></i></a></li>
-                  <li><a href="tel:0701234567" data-toggle="tooltip" data-placement="bottom" title="0701234567"><i class="fa fa-phone"></i></a></li>
+                  <li><a href="tel:070-727 37 12" data-toggle="tooltip" data-placement="bottom" title="070-727 37 12"><i class="fa fa-phone"></i></a></li>
                 </ul>
               </div>
             </div>
