Update day-after text

--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@
           (ICA-banken, 9271-938 039 3). Vill ni hellre ge något
           annat, så har vår toastmaster tips på sådant som vi önskar oss.</p>
 
-        <p class="dymo-inline"><span class="dymo">|Dagen|efter|</span> - Dagen efter bröllopet arrangeras en gemensam frukost
-          på Strandhotellet. För er som bor på där ingår frukosten i boendet, för er övriga kostar frukosten
+        <p class="dymo-inline"><span class="dymo">|Dagen|efter|</span> - För de som vill intas en gemensam frukost
+          på Strandhotellet dagen efter. För er som bor på Strandhotellet ingår frukosten i boendet, för er övriga kostar frukosten
           xx kr per person (mer information kommer...). Vänligen meddela toastmaster Gabriel om du önskar
           delta på frukosten senast den <strong>30 maj</strong>.
         </p>
