New pics and some css style changes

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
     <div class="row vertical-aligned-md">
       <div class="col-md-6 col-sm-12 wow fadeInUp">
-        <img src="img/we2.jpg" class="img-responsive img-centered img-rounded" style="margin-bottom: 20px;" />
+        <img src="img/us.jpg" class="img-responsive img-centered img-rounded" style="margin-bottom: 20px;" />
       </div>
 
       <div class="col-md-6 col-sm-12 wow fadeInUp">
