--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <div class="col-md-6 col-sm-4 col-xs-12 team">
             <div class="thumbnail"> <img src="img/team/01.jpg" alt="Michaela" class="img-circle team-img">
               <div class="caption">
-                <h3>Mikaela Gren</h3>
+                <h3>Michaela Gren</h3>
                 <p>Brudtärna</p>
                 <ul class="list-inline">
                   <li><a href="mailto:michaela@smarr.se" data-toggle="tooltip" data-placement="bottom" title="michaela@smarr.se"><i class="fa fa-envelope"></i></a></li>
