Small text changes

--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
           AnnSofie Eliasson (brudgummens mor) på telefon 070-3362 915
           och berätta då om ni har några speciella allergier eller önskemål när det gäller mat och dryck.</p>
 
-        <p class="dymo-inline"><span class="dymo">|Tal|</span> - I god tid innan bröllopet vill vi även att ni meddelar
-          toastmaster Gabriel Tiste om eventuella tal. Han kan även svara på andra funderingar som ni har. Självklart är
+        <p class="dymo-inline"><span class="dymo">|Tal|&|Annat|Skoj|</span> - I god tid innan bröllopet vill vi även att ni meddelar
+          toastmaster Gabriel Tiste om eventuella tal eller annat skoj. Han kan även svara på andra funderingar som ni har. Självklart är
           ni också välkomna att höra av er till oss. Kontaktuppgifter till Gabriel hittar ni <strong><a href="#team-section" class="page-scroll">här</a></strong>.</p>
 
         <p class="dymo-inline"><span class="dymo">|Musik|</span> - Maila <strong>tre</strong> av era bästa partylåtar för kvällen till musik@smarr.se.</p>
@@ -340,8 +340,8 @@
 
         <p class="dymo-inline"><span class="dymo">|Dagen|efter|</span> - För de som vill intas en gemensam frukost
           på Strandhotellet dagen efter. För er som bor på Strandhotellet ingår frukosten i boendet, för er övriga kostar frukosten
-          xx kr per person (mer information kommer...). Vänligen meddela toastmaster Gabriel om du önskar
-          delta på frukosten senast den <strong>30 maj</strong>.
+          xx kr per person (mer information kommer...). Vänligen meddela <strong><a href="mailto:jjwedding@smarr.se"  data-toggle="tooltip" data-placement="bottom" title="jjwedding@smarr.se">oss</a></strong> om du önskar
+          delta på frukosten senast den <strong>15 maj</strong>.
         </p>
       </div>
     </div>
