Correct breakfast price

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
         <p class="dymo-inline"><span class="dymo">|Dagen|efter|</span> - För de som vill intas en gemensam frukost
           på Strandhotellet dagen efter. För er som bor på Strandhotellet ingår frukosten i boendet, för er övriga kostar frukosten
-          xx kr per person (mer information kommer...). Vänligen meddela <strong><a href="mailto:jjwedding@smarr.se"  data-toggle="tooltip" data-placement="bottom" title="jjwedding@smarr.se">oss</a></strong> om du önskar
+          90 kr per person. Vänligen meddela <strong><a href="mailto:jjwedding@smarr.se"  data-toggle="tooltip" data-placement="bottom" title="jjwedding@smarr.se">oss</a></strong> om du önskar
           delta på frukosten senast den <strong>15 maj</strong>.
         </p>
       </div>
