--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="thumbnail"> <img src="img/team/03.jpg" alt="Sara" class="img-circle team-img">
               <div class="caption">
                 <h3>Sara Tiste</h3>
-                <p>Toastmasterns och brudtärnans högra hand</p>
+                <p>Brudtärna & Toastmasterns högra hand</p>
                 <ul class="list-inline">
                   <li><a href="mailto:sara@smarr.se" data-toggle="tooltip" data-placement="bottom" title="sara@smarr.se"><i class="fa fa-envelope"></i></a></li>
                   <li><a href="tel:070-727 37 12" data-toggle="tooltip" data-placement="bottom" title="070-727 37 12"><i class="fa fa-phone"></i></a></li>
@@ -335,8 +335,7 @@
           hör hemmet till under våra år tillsammans.</p>
 
         <p class="dymo-inline">Om ni ändå önskar ge något så är ett litet bidrag till vår bröllopsresa välkommet
-          (ICA-banken, 9271-938 039 3). Vill ni hellre ge något
-          annat, så har vår toastmaster tips på sådant som vi önskar oss.</p>
+          (ICA-banken, 9271-938 039 3).</p>
 
         <p class="dymo-inline"><span class="dymo">|Dagen|efter|</span> - För de som vill intas en gemensam frukost
           på Strandhotellet dagen efter. För er som bor på Strandhotellet ingår frukosten i boendet, för er övriga kostar frukosten
